# forkscout

./: .env.example  .forklift_session.json  .forklift_session.json.backup  .gitignore  .pre-commit-config.yaml  .pypirc.template  CHATGPT_THUMBNAIL_PROMPT.md  CONTRACT_TEST_UPDATES.md  EXPERT_ANALYZER_SUMMARY.md  FINAL_QUALITY_ASSURANCE_REPORT.md  FINAL_SUBMISSION_CHECKLIST.md  FINAL_SUBMISSION_SUMMARY.md  GITHUB_REPO_DESCRIPTIONS.md  HACKATHON_SUBMISSION.md  HACKATHON_SUBMISSION_CORRECTED.md  HACKATHON_SUBMISSION_FINAL.md  HACKATHON_SUBMISSION_FORM.md  IMPLEMENTATION_SUMMARY.md  KIRO_DEVELOPMENT_SHOWCASE.md  PROJECT_VALUE_AND_IMPACT.md  PYPI_PUBLICATION_STATUS.md  README.md  SUBMISSION_CHECKLIST.md  SUBMISSION_STATUS_UPDATE.md  TEST_COVERAGE_ANALYSIS.md  THUMBNAIL_DESIGN_SPECIFICATION.md  ai-hedge-fund.txt  cache_coverage_summary.md  commit_expert_analyzer.py  coverage.json  coverage_summary.md  debug_behind_commits.py  debug_output.txt  debug_truncation.txt  dev_to_blog_post.md  enhanced_show_commits.py  final_test.txt  final_test_output.txt  fixed_truncation.txt  forklift.example.json  (+37 more)
.kiro/hooks/: HOOKS_DOCUMENTATION.md  README.md  automated-testing.json  code-quality-checks.json  comprehensive-test-automation.json  comprehensive-test-runner.kiro.hook  documentation-updates.json  git-integration.sh  hook-manager.py  spec-validation.json
.kiro/steering/: api-design.md  breakdown.md  cache-integration.md  code-quality.md  env.md  error-handling.md  git-workflow.md  integration-testing.md  mock-data-generation.md  online-testing.md  performance.md  security.md  spec-management.md  structure.md  task-execution-checklist.md  task-management.md  tdd.md  uv.md
.qoder/quests/: code-review.md  terminal-column-display-fix.md
demo/: click-demo-config.yaml  demo_scenarios.md  editing_checklist.md  example_outputs.md  fastapi-demo-config.yaml  final_submission_checklist.md  measure_demo_timing.py  prepare_demo.sh  production_guide.md  quick_timing_test.py  recording_script.md  rich-demo-config.yaml  test_basic_functionality.py  test_original_repos.py  thumbnail_specs.md  upload_guide.md  video_script.md  vscode-demo-config.yaml
demos/: behind_commits_demo.py  commit_summary_script.py  optimized_commit_fetching_demo.py  parent_repo_caching_demo.py  rate_limiting_demo_script.py
docs/: ADVANCED_KIRO_INTEGRATION.md  AI_ASSISTED_DEVELOPMENT_PATTERNS.md  BEHIND_COMMITS_FEATURE.md  BEHIND_COMMITS_IMPLEMENTATION_SUMMARY.md  CACHE_INTEGRATION_GUIDELINES.md  COMMIT_COUNTING_TROUBLESHOOTING.md  KIRO_USAGE_CASE_STUDIES.md  KIRO_USAGE_DOCUMENTATION.md  PYPI_PUBLICATION_GUIDE.md  SHOW_COMMITS_GUIDE.md  SPEC_EVOLUTION_TIMELINE.md  STEERING_RULES_IMPACT.md
examples/: behind_commits_demo.py  optimized_commit_fetching_demo.py  test_batch_optimization.py  test_progress_feedback.py
scripts/: analyze_documentation.py  analyze_project_cleanup.py  analyze_test_coverage.py  check_model_serialization.py  generate_optimization_recommendations.py  generate_project_health_report.py  interactive_upload.py  publish_to_pypi.py  run_code_quality_analysis.py  set_pypi_tokens.sh  setup_pypi_auth.py  test_pypi_upload.py  validate_submission_readiness.py  verify_behind_commits_api.py  verify_pypi_readiness.py
src/forklift/: __init__.py  cli.py  exceptions.py
src/forkscout/: cli.py
tests/: test_fork_data_collection_runner.py
tests/contract/: test_cache_contracts.py  test_commit_counting_contracts.py  test_show_commits_contracts.py  test_show_forks_detail_contracts.py
tests/e2e/: test_csv_export_fix_e2e.py  test_fork_data_collection_e2e.py  test_show_forks_commits_e2e.py  test_smart_fork_filtering_e2e.py
tests/integration/: test_ai_summary_display_integration.py  test_ai_usage_tracking_integration.py  test_cache_integration.py  test_cli_analyze_with_explanations.py  test_cli_detailed_commits.py  test_cli_enhanced_explanations.py  test_cli_fork_data_display.py  test_cli_integration.py  test_cli_interactive_mode.py  (+17 more)
(+188 files in other folders)
